# WineQualityMLFlow

./: Dockerfile  LICENSE  README.md  app.py  main.py  pyproject.toml  setup.py  template.py
.github/workflows/: main.yaml
mlruns/0/: meta.yaml
mlruns/0/0b77660c403e415faa4acb62a00db639/: meta.yaml
mlruns/0/0b77660c403e415faa4acb62a00db639/metrics/: mae  r2  rmse
mlruns/0/0b77660c403e415faa4acb62a00db639/tags/: mlflow.runName  mlflow.source.git.commit
mlruns/0/187a158a2f444bbe987209b67c06e5bb/: meta.yaml
mlruns/0/187a158a2f444bbe987209b67c06e5bb/metrics/: mae  r2  rmse
mlruns/0/187a158a2f444bbe987209b67c06e5bb/tags/: mlflow.runName
mlruns/0/b58c60e786d2458b9cbf5b4f5a56d009/: meta.yaml
mlruns/0/b58c60e786d2458b9cbf5b4f5a56d009/metrics/: mae  r2  rmse
mlruns/0/b58c60e786d2458b9cbf5b4f5a56d009/tags/: mlflow.runName
mlruns/0/bbe9da73a0854040b184e4969c1debe6/: meta.yaml
mlruns/0/eafe8362048a4c1bbff51e716bff7302/: meta.yaml
research/: 01_data_ingestion.ipynb  02_data_validation.ipynb  03_data_transformation.ipynb  04_model_trainer.ipynb  05_model_evaluation.ipynb  trials.ipynb
src/WineQualityMLFlow/components/: data_ingestion.py  data_transformation.py  data_validation.py  model_evaluation.py  model_trainer.py
src/WineQualityMLFlow/config/: configuration.py
src/WineQualityMLFlow/entity/: config_entity.py
src/WineQualityMLFlow/pipeline/: prediction.py  stage_01_data_ingestion.py  stage_02_data_validation.py  stage_03_data_transformation.py  stage_04_model_trainer.py  stage_05_model_evaluation.py
src/WineQualityMLFlow/utils/: common.py
(+8 files in other folders)
