[tool.poetry]
name = "winequalitymlflow"
version = "0.1.0"
description = "Wine Quality MLFlow project"
authors = ["juanpegarcia11 <juanpegarciam11@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "2.0.3"
mlflow = "2.2.2"
notebook = "7.0.1"
numpy = "1.24.4"
scikit-learn = "1.3.0"
matplotlib = "3.7.2"
python-box = "6.0.2"
pyYAML = "6.0.1"
tqdm = "4.65.0"
ensure = "1.0.2"
joblib = "1.3.1"
types-PyYAML = "6.0.12.11"
Flask = "2.3.2"
Flask-Cors = "4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
